--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
     background-color: whitesmoke;
     height: 100vh;
     width: 100vw;
+    position: fixed;
+    z-index: 10;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,10 +49,22 @@ body {
     right: 0;
     width: 100%;
     height: 60px;
+    z-index: -1;
+}
+
+.clickable {
+    color: dodgerblue;
+    cursor: pointer;
+    user-select: none;
+}
+
+.clickable:hover {
+    color: rgb(13, 115, 218);
 }
 
 /* Images Container */
 .images-container {
+    width: 800px;
     margin-top: 50px;
 }
 
@@ -60,10 +74,16 @@ body {
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+    overflow: hidden;
 }
 
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-img-top {
+    width: 100%;
+    height: auto;
 }
 
 .card-body {
@@ -97,9 +117,18 @@ body {
     body {
         line-height: 1.4rem;
         font-size: 0.9rem;
+        text-align: justify;
     }
 
     .card-title {
         font-size: 20px;
+    }
+
+    .images-container {
+        width: 100%;
+    }
+
+    .save-confirmed {
+        right: 25px;
     }
 }
